Fix fdo#64751 – Header & footer blue tags empty

No idea FontMetric::GetHeight() is supposed to mean, probably the code
here meant GetLineHeight(). What it actually need is GetAscent(), so use
it instead (which is the same as GetLineHeight() - GetDescent()).

Change-Id: Ic467e56ed6b8d245ac7800f94e6d40030833328b
Reviewed-on: https://gerrit.libreoffice.org/3980
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>